06_load_excel_files changes

--- a/notebooks/06_load_excel_files/06_load_excel_files.ipynb
+++ b/notebooks/06_load_excel_files/06_load_excel_files.ipynb
@@ -3,6 +3,14 @@
   "kernelspec": {
    "display_name": "Streamlit Notebook",
    "name": "streamlit"
+  },
+  "lastEditStatus": {
+   "notebookId": "7d37xnb6gejsaf5mumdk",
+   "authorId": "5144594422456",
+   "authorName": "SNAIR",
+   "authorEmail": "slash.nair@gmail.com",
+   "sessionId": "66868417-f7d9-4812-8f23-b5c3447f7e80",
+   "lastEditTime": 1747519375071
   }
  },
  "nbformat_minor": 5,
@@ -110,7 +118,7 @@
     "name": "sql_debugging"
    },
    "outputs": [],
-   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\n--SHOW TABLES;",
+   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\nSHOW TABLES;",
    "execution_count": null
   }
  ]
